chore: perkup/adapt swagger documentation
