# internal/infra/controllers/product_controller.go
@@ -31,16 +31,17 @@ func NewProductController(
 }
 
 // CreateProduct godoc
-// @Summary      Create a product
-// @Description  register the product information
-// @Tags         products
-// @Accept       json
-// @Produce      json
-// @Param        product   body      ProductRequest  true  "Insert Product"
-// @Success      200  {object}  dtos.ProductDTO
-// @Failure      400 {string} string "when invalid params"
-// @Failure      500 {string} string "when create process error"
-// @Router       /product/ [post]
+//
+//	@Summary		Create a product
+//	@Description	register the product information
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			product	body		ProductRequest	true	"Insert Product"
+//	@Success		200		{object}	dtos.ProductDTO
+//	@Failure		400		{string}	string	"when bad request"
+//	@Failure		500		{string}	string	"when create product process error"
+//	@Router			/product/ [post]
 func (pc *ProductController) CreateProduct(c httpserver.HTTPContext) {
 	var product ProductRequest
 	c.BindJSON(&product)
@@ -70,16 +71,18 @@ func (pc *ProductController) CreateProduct(c httpserver.HTTPContext) {
 }
 
 // UpdateProduct godoc
-// @Summary      Update a product
-// @Description  change the product information
-// @Tags         products
-// @Accept       json
-// @Produce      json
-// @Param        product   body      ProductRequest  true  "Update Product"
-// @Success      200  {object}  dtos.ProductDTO
-// @Failure      400 {string} string "when invalid params"
-// @Failure      500 {string} string "when update process error"
-// @Router       /product/{id}/ [put]
+//
+//	@Summary		Update a product
+//	@Description	change the product information
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		string			true	"Product identifier"
+//	@Param			product	body		ProductRequest	true	"Product object"
+//	@Success		200		{object}	dtos.ProductDTO
+//	@Failure		400		{string}	string	"when bad request"
+//	@Failure		500		{string}	string	"when update product process error"
+//	@Router			/product/{id}/ [put]
 func (pc *ProductController) UpdateProduct(c httpserver.HTTPContext) {
 	var product ProductRequest
 	if err := c.BindJSON(&product); err != nil {
@@ -110,16 +113,17 @@ func (pc *ProductController) UpdateProduct(c httpserver.HTTPContext) {
 }
 
 // DeleteProduct godoc
-// @Summary      Delete a product
-// @Description  remove the product information
-// @Tags         products
-// @Accept       json
-// @Produce      json
-// @Param        product   body      ProductRequest  true  "Delete Product"
-// @Success      200 {string} string
-// @Failure      400 {string} string "when invalid params"
-// @Failure      500 {string} string "when delete process error"
-// @Router       /product/{id}/ [delete]
+//
+//	@Summary		Delete a product
+//	@Description	remove the product information
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"Product identifier"
+//	@Success		200	{string}	string
+//	@Failure		400	{string}	string	"when when bad request"
+//	@Failure		500	{string}	string	"when delete product process error"
+//	@Router			/product/{id}/ [delete]
 func (pc *ProductController) DeleteProduct(c httpserver.HTTPContext) {
 	id := c.Param("id")
 	deleteProduct := products.NewDeleteProductUseCase(pc.productRepository)
@@ -136,16 +140,19 @@ func (pc *ProductController) DeleteProduct(c httpserver.HTTPContext) {
 }
 
 // ListProductsByCategory godoc
-// @Summary      List products
-// @Description  List a set of products information over followed categories
-// @Tags         products
-// @Accept       json
-// @Produce      json
-// @Param        category   path      string  true  "List Product By Category"
-// @Success      200 {array} dtos.ProductDTO
-// @Failure      400 {string} string "when invalid params"
-// @Failure      500 {string} string "when list process error"
-// @Router       /product/{category}/ [get]
+//
+//	@Summary		List products
+//	@Description	List a set of products information over followed categories
+//	@Tags			products
+//	@Accept			json
+//	@Produce		json
+//	@Param			category	path		string	true	"Product category"
+//	@Param			page		query		string	false	"Page defaults to 1"
+//	@Param			size		query		string	false	"Size defaults to 50"
+//	@Success		200			{array}		dtos.ProductDTO
+//	@Failure		400			{string}	string	"when bad request"
+//	@Failure		500			{string}	string	"when list products process error"
+//	@Router			/product/{category}/ [get]
 func (pc *ProductController) ListProductsByCategory(c httpserver.HTTPContext) {
 	category := c.Param("category")
 
